<resources>
    <string name="app_name">MatFIT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="enter">Entrar</string>
    <string name="exit">Sair</string>
    <string name="text_user_name">NOME USUÁRIO</string>
    <string name="textAlunos">Alunos</string>
    <string name="textFuncionarios">Funcionários</string>
    <string name="textEquipamentos">Equipamentos</string>

    <string name="cpf">CPF</string>
    <string name="name">Nome</string>
    <string name="sport">Esporte</string>
    <string name="day">Dia</string>
    <string name="register">Cadastrar</string>
    <string name="update">Atualizar</string>
    <string name="textErrorCpf">CPF inválido</string>
    <string name="textErrorName">Insira um nome válido</string>
    <!--    ALUNO-->
    <string name="textErrorSport">Insira um esporte válido</string>
    <string name="textErrorFuncao">Insira uma função válida</string>
    <string name="textErrorCpfExistent">CPF já está cadastrado!</string>
    <string name="textRegisterAluno">Cadastrar aluno</string>
    <string name="textUpdateAluno">Atualizar aluno</string>
    <string name="textSucessRegisterAluno">Aluno cadastrado com sucesso!</string>
    <string name="textSucessUpdatedAluno">Aluno atualizado com sucesso!</string>
    <string name="textSucessDeletedAluno">Aluno deletado com sucesso!</string>
    <string name="textFailureRegisterAluno">Falha ao cadastrar o aluno. Verifique!</string>
    <string name="textFailureDeletedAluno">Falha ao deletar o aluno. Verifique!</string>
    <string name="textFailureUpdatedAluno">Falha ao atualizar o aluno. Verifique!</string>

    <string name="textCardName">Nome: </string>
    <string name="textCardCpf">CPF: </string>
    <string name="textCardSport">Esporte: </string>
    <string name="textCardDay">Data do pagamento: </string>
    <string name="textTotalAlunosRegisted">Lista de Alunos</string>

    <!--    FUNCIONARIO-->
    <string name="textCardFuncao">Função: </string>
    <string name="textCardCargaHoraria">Carga Horária: </string>
    <string name="textListFuncionarios">Lista de Funcionários</string>
    <string name="textListEquipamentos">Lista de Equipamentos</string>
    <string name="textResultRegisted">0</string>
    <string name="deleteAluno">Excluir aluno</string>
    <string name="deleteFuncionario">Excluir funcionário</string>
    <string name="deleteEquipamento">Excluir equipamento</string>
    <string name="textConfirmationDelete">Tem certeza que deseja excluir?</string>
    <string name="yes">Sim</string>
    <string name="cancel">Cancelar</string>
    <string name="cpfNotFound">cpf not found</string>
    <string name="nameNotFound">name not found</string>
    <string name="sportNotFound">sport not found</string>

    <string name="textFieldEmptyLogin">O campo deve ser preenchido com seu nome.</string>
    <string name="textNameInvalid">Insira um nome válido!</string>
    <string name="textTypeName">Digite seu nome</string>
    <string name="textEnter">Entrar</string>
    <string name="textExit">Sair</string>
    <string name="textRegisterFuncionario">Cadastrar Funcionário</string>
    <string name="textRegisterEquipamento">Cadastrar Equipamento</string>
    <string name="textUpdateEquipamento">Atualizar Equipamento</string>
    <string name="textFuncao">Função</string>
    <string name="textCargHoraria">Carga Horária</string>
    <string name="textUpdateFuncionario">Atualizar Funcionário</string>
    <string name="textMatFit">MAT-FIT</string>
    <string name="textSuccessRegisterFuncionario">Funcionario cadastrado com sucesso!</string>
    <string name="textFailureRegisterFuncionario">Falha ao cadastrar funcionário. Verifique!</string>
    <string name="textValidarCargaHoraria">A carga horária deve ser maior que 0.</string>
    <string name="textSuccessDeleteFuncionario">Funcionário deletado com sucesso!</string>
    <string name="textFailureDeleteFuncionario">Falha ao deletar funcionário. Verifique!</string>
    <string name="textQuantity">Quantidade:</string>
    <string name="textValidationQuantity">A quantidade deve ser maior que 0</string>
    <string name="textEquipamentoNotFound">Equipamento não encontrado</string>
    <string name="textFuncionarioNotFound">Funcionário não encontrado</string>
    <string name="textSuccessRegisterEquipamento">Equipamento cadastrado com sucesso!</string>
    <string name="textFailureRegisterEquipamento">Falha ao cadastrar o equipamento. Verifique!</string>
    <string name="textSuccessDeleteEquipamento">Equipamento removido com sucesso!</string>
    <string name="textFailureDeleteEquipamento">Falha ao deletar o equipamento. Verifique!</string>
    <string name="textSuccessUpdateEquipamento">Equipamento atualizado com sucesso!</string>
    <string name="textFailureUpdateEquipamento">Falha ao atualizar o equipamento. Verifique!</string>
    <string name="textAlunoNotFound">Aluno não encontrado</string>
    <string name="textConfirmPayment">Confirmar Pagamento</string>
    <string name="textStatusPayment">Status do Pagamento:</string>
    <string name="textSuccessPayment">Pagamento realizado com sucesso!</string>
    <string name="textFailurePayment">Falha ao realizar o pagamento. Verifique!</string>
    <string name="textListEmptyFuncionario">Nenhum Funcionário Cadastrado</string>
    <string name="textListEmptyEquipamentos">Nenhum Equipamento Cadastrado</string>
    <string name="textListEmptyAluno">Nenhum Aluno Cadastrado</string>
    <string name="tetxConfirmPayment">Confirmar</string>

</resources>